<resources>
    <string name="app_name">Campsite Commander Application</string>
    <string name="display_list">Display List</string>
    <string name="logo">logo</string>
    <string name="imagelogo">imageLogo</string>
    <string name="add_gear">Add Gear</string>
    <string name="textview">TextView</string>
    <string name="add_item_here">Add item here</string>
    <string name="add_to_your_gear">Add to your Gear</string>
    <string name="show_list">Show List</string>
    <string name="total_items_packed">Total Items Packed</string>
    <string name="total_items">Total Items</string>
    <string name="add_itemts">Add Itemts</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="todo">TODO</string>
    <string name="campsite_commander">Campsite Commander</string>
    <string name="button">Button</string>
</resources>