<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backround"
    tools:context=".MainActivity"
    tools:ignore="VisualLintBounds">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="4"
            android:height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/add_itemts"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#A29E9E" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#009688"
            android:text="@string/add"
            android:textColor="#000000" />

    </LinearLayout>

    <Button
        android:id="@+id/backBtn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button" />

</LinearLayout>